# Dhiksha

./: .env.example  .gitignore  CLEANUP_GUIDE.md  CODEOWNERS  COMPARISON.md  DASHBOARD_GUIDE.md  DELIVERY_SUMMARY.md  Dockerfile  FEATURES_SUMMARY.md  IMPLEMENTATION_STATUS.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_NO_DOCKER.md  README.md  RESTRUCTURING_SUMMARY.md  START_DASHBOARD.md  START_HERE.md  app_full.py  docker-compose.yml  pyproject.toml  recommender.db  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run.ps1  run.sh  run_local.py
.github/workflows/: ci.yml
backend/: app.py
docs/: ARCHITECTURE.md  MAINTENANCE.md  RUNBOOK.md
frontend/: dashboard.css  dashboard.html  index.html
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml
scripts/: build_milvus_index.py  dev_down.ps1  dev_down.sh  dev_up.ps1  dev_up.sh  init_db.py  sample_data_generator.py
src/api/: main.py
src/data/: schemas.py
src/models/: train_ranking.py  train_retrieval.py
src/utils/: config.py
static/: app.js  dashboard.js  styles.css
tests/unit/: test_api.py
